UCDetector 1.2.0 from 2009-:
Bugfixes:
 - [ 2783734 ] Static imports are not recognized
 - [ 2787576 ] Waiting for first 10 markers
 - [ 2776029 ] Final for fields initialized in subclass constructors
 - [ 2808853 ] Don't create "0 references marker" for classes with main methods
 - [ 2811049 ] Html report is overridden each run
 - [ 2810802 ] UCDetector crashes with an Exception

New features:
 - Improved running UCDetector headless: More Options. Refresh/compile workspace 
 - Detect order changed: Detect a complete class, then detect next class
 - Removed method/field detection of anonymous classes. Already done by eclipse, slow
 - [ 2803618 ] Add number of references to report
 - [ 2658675 ] Want annotations, not comments, to indicate non-dead code

// -----------------------------------------------------------------------------
UCDetector 1.1.0 from 2009-04-15:
Bugfixes:
 - [ 2743872 ] Don't check for constructors called only 1 time
 - [ 2743908 ] Methods only called from inner class could be private
 - [ 2762967 ] XmlReport: Problems running UCDetector

// -----------------------------------------------------------------------------
UCDetector 1.0.0 from 2009-04-03:
New features:
 - [ 2409697 ] Detect code only called from tests
 - [ 2373808 ] Classes found by text search should have no markers
 - [ 2490344 ] Filters options for visibility (fields, constants, methods)
 - [ 2653112 ] UCDetector should run as a ant task in headless mode
 - [ 2417657 ] QuickFix should behave as for Java problems (propose all occurrences)

Bugfixes:
 - [ 2373808 ] Classes found by text search should have no markers
 - [ 2600845 ] UCDetector html report broken
 - [ 2715348 ] Filter on Source folders does not work
 - [ 2539795 ] Added marker warning for: Wrong default visibility marker for classes
 - [ 2721955 ] On QuickFix the direct sibling marker gets deleted too

// -----------------------------------------------------------------------------
UCDetector 0.12.0 from 2008-11-25: